--- a/Figure4&5/readme
+++ b/Figure4&5/readme
@@ -1,3 +1,3 @@
 this folder contains the globe analysis code, loading the data in Figure3 can get the result, we also include the data here as:
-'GATMD.CSV' for tr-ESFG raw data for pristine Mos2
-'GARu.CSV' for tr-ESSFG raw data for Ru-MoS2
+'PristineTMD.csv' for tr-ESFG raw data of pristine Mos2
+'RuTMD.csv' for tr-ESFG raw data of Ru-Mos2
